feat(event): add crud on event for admin
