# app/events/delivery/http/register_event.go
@@ -20,7 +20,7 @@ import (
 // @Failure 400 {object} domain.HttpResponse
 // @Failure 500 {object} domain.HttpResponse
 // @Success 200 {object} domain.HttpResponse
-// @Router /api/events/registrations [post]
+// @Router /api/v1/events/registrations [post]
 func (h Handler) RegisterEvent(w http.ResponseWriter, r *http.Request) {
 	bodyBytes, err := io.ReadAll(r.Body)
 	if err != nil {
